--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch": "nodemon ./bin/www"
+  },
+  "engines": {
+    "node": "4.1.1"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
