--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "nodemon ./bin/www"
   },
   "engines": {
-    "node": "4.1.1"
+    "node": "7.10.0",
+    "npm": "4.2.0"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
